# classias

./: ChangeLog  Makefile.am  README  autogen.sh  classias.sln  configure.in  genbinary.sh.in
doc/: doxyfile  header.html
drivers/python/: binary.py  generate.py
frontend/: Makefile.am  frontend.vcproj  main.cpp  multi.cpp  multi_classify.cpp  multi_rank.cpp  multi_select.cpp  multiclass.cpp  option.h  optparse.h  ranker.cpp  selector.cpp  tokenize.h  train.h  util.h
frontend/contrib/libexecstream/: exec-stream.cpp
frontend/contrib/libexecstream/win/: exec-stream-helpers.cpp  exec-stream-impl.cpp
frontend/include/: os.h  util.h
frontend/tag/: Makefile.am  binary.cpp  candidate.cpp  defaultmap.h  main.cpp  multi.cpp  option.h  tag.vcproj
frontend/train/: Makefile.am  attribute.cpp  binary.cpp  candidate.cpp  main.cpp  multi.cpp  option.h  train.h  train.vcproj
include/: Makefile.am
include/classias/: Makefile.am  base.h  classias.h  data.h  evaluation.h  feature.h  feature_generator.h  instance.h  lbfgs.h  linear.h  logress.h  maxent.h  parameters.h  quark.h  traits.h  types.h  version.h
include/classias/classify/: Makefile.am
include/classias/classify/linear/: Makefile.am  binary.h  candidate.h  multi.h
include/classias/train/: Makefile.am  averaged_perceptron.h  lbfgs.h  online_scheduler.h  pegasos.h  truncated_gradient.h
include/classias/train/averaged_perceptron/: binary.h
include/classias/train/lbfgs/: base.h  binary.h  candidate.h  multi.h
include/classias/train/pegasos/: binary.h
lib/: Makefile.am  lbfgs.cpp  lib.vcproj
lib/win32/: lbfgs.h  lbfgs.lib  lbfgs_debug.lib
sample/: Makefile.am  strsplit.h  tag_binary.cpp  tag_binary.vcproj  train_binary_batch.cpp  train_binary_batch.vcproj  train_binary_online.cpp  train_binary_online.vcproj
win32/: Makefile.am  config.h
