dnl $Id$
dnl
dnl
dnl Exported and configured variables:
dnl CXXFLAGS
dnl LDFLAGS
dnl INCLUDES


dnl ------------------------------------------------------------------
dnl Initialization for autoconf
dnl ------------------------------------------------------------------
AC_PREREQ(2.59)
AC_INIT
AC_CONFIG_SRCDIR([frontend/train/main.cpp])


dnl ------------------------------------------------------------------
dnl Checks for system
dnl ------------------------------------------------------------------
AC_CANONICAL_HOST
AC_AIX
AC_MINIX
AC_ISC_POSIX


dnl ------------------------------------------------------------------
dnl Initialization for automake
dnl ------------------------------------------------------------------
AM_INIT_AUTOMAKE(trankin, 0.1)
AC_CONFIG_HEADERS(config.h)
AM_MAINTAINER_MODE
AM_C_PROTOTYPES


dnl ------------------------------------------------------------------
dnl Checks for program
dnl ------------------------------------------------------------------
AC_PROG_CXX
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_LN_S


dnl ------------------------------------------------------------------
dnl Initialization for variables
dnl ------------------------------------------------------------------
CXXFLAGS="${ac_save_CXXFLAGS}"
LDFLAGS="${ac_save_LDFLAGS}"
INCLUDES="${ac_save_INCLUDES}"


dnl ------------------------------------------------------------------
dnl Checks for header files.
dnl ------------------------------------------------------------------
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h strings.h unistd.h stdint.h)


dnl ------------------------------------------------------------------
dnl Checks for typedefs, structures, and compiler characteristics.
dnl ------------------------------------------------------------------
AC_C_CONST
AC_CHECK_SIZEOF
AC_TYPE_SIZE_T
AC_STRUCT_TM
AC_CHECK_TYPES([uint8_t, uint16_t, uint32_t])

dnl ------------------------------------------------------------------
dnl Checks for debugging mode
dnl ------------------------------------------------------------------
AC_ARG_ENABLE(
  debug,
  [AS_HELP_STRING([--enable-debug],[Turn on debugging])]
)

if test "x$enable_debug" = "xyes"; then
   CXXFLAGS="-DDEBUG -O -g ${CXXFLAGS}"
else
   CXXFLAGS="-O3 -ffast-math ${CXXFLAGS}"
fi

dnl ------------------------------------------------------------------
dnl Checks for profiling mode
dnl ------------------------------------------------------------------
AC_ARG_ENABLE(
  profile,
  [AS_HELP_STRING([--enable-profile],[Turn on profiling])]
)

if test "x$enable_profile" = "xyes"; then
   CXXFLAGS="-DPROFILE -pg ${CXXFLAGS}"
fi


dnl ------------------------------------------------------------------
dnl Checks for library functions.
dnl ------------------------------------------------------------------
AC_FUNC_ALLOCA
AC_FUNC_MEMCMP
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strdup strerror strtol strtoul)

dnl Check for math library
AC_CHECK_LIB(m, rand)

AC_ARG_WITH(
	liblbfgs,
	[AS_HELP_STRING([--with-liblbfgs=DIR],[liblbfgs directory])],
	[INCLUDES="-I${withval}/include ${INCLUDES}"; LDFLAGS="-L${withval}/lib ${LDFLAGS}"]
)
AC_CHECK_LIB(lbfgs, lbfgs)

INCLUDES="-I\$(top_srcdir) -I\$(top_srcdir)/include -I\$(srcdir)i ${INCLUDES}"

dnl ------------------------------------------------------------------
dnl Export variables
dnl ------------------------------------------------------------------
AC_SUBST(CXXFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(INCLUDES)

dnl ------------------------------------------------------------------
dnl Output the configure results.
dnl ------------------------------------------------------------------
AC_CONFIG_FILES(Makefile include/Makefile frontend/Makefile frontend/train/Makefile win32/Makefile)
AC_OUTPUT
