# $Id$

classiasincludedir = $(includedir)/classias

classiasinclude_HEADERS = \
	classias/base.h \
	classias/traits.h \
	classias/instance.h \
	classias/data.h \
	classias/classias.h \
	classias/version.h \
	classias/linear.h \
	classias/quark.h \
	classias/parameters.h \
	classias/evaluation.h \
	classias/lbfgs.h \
	classias/maxent.h \
	classias/logress.h 
