# $Id$

classiasincludedir = $(includedir)/classias

classiasinclude_HEADERS = \
	classias/classify/linear/binary.h \
	classias/classify/linear/candidate.h \
	classias/classify/linear/multi.h \
	classias/train/lbfgs/base.h \
	classias/train/lbfgs/binary.h \
	classias/train/lbfgs/candidate.h \
	classias/train/lbfgs/multi.h \
	classias/classias.h \
	classias/data.h \
	classias/evaluation.h \
	classias/feature_generator.h \
	classias/instance.h \
	classias/parameters.h \
	classias/quark.h \
	classias/types.h \
	classias/version.h
