# $Id$

classiasincludedir = $(includedir)/classias

classiasinclude_HEADERS = \
	classias/classify/linear/binary.h \
	classias/classify/linear/multi.h \
	classias/classias.h \
	classias/data.h \
	classias/feature_generator.h \
	classias/instance.h \
	classias/quark.h \
	classias/types.h \
	classias/evaluation.h \
	classias/parameters.h \
	classias/version.h \
	classias/train/averaged_perceptron.h \
	classias/train/lbfgs.h \
	classias/train/online_scheduler.h \
	classias/train/pegasos.h \
	classias/train/truncated_gradient.h
