# $Id$

noinst_PROGRAMS = classias-train-binary-online classias-train-binary-batch

classias_train_binary_online_SOURCES = \
	strsplit.h \
	train_binary_online.cpp

classias_train_binary_batch_SOURCES = \
	strsplit.h \
	train_binary_batch.cpp

AM_CXXFLAGS = @CXXFLAGS@
INCLUDES = @INCLUDES@ -I../include
AM_LDFLAGS = @LDFLAGS@
